@@ -5,6 +5,7 @@ Changelog
 (unreleased)
 ------------
 - Updated plotting patches. [lgblkb]
+- Updated plotting patches. [lgblkb]
 - Added tests and fixed dependencies. [lgblkb]
 - Added tests and fixed dependencies. [lgblkb]
 - Fixed bug with get_name not defined and Path object not found. Spasibo
